<resources>
    <string name="app_name">Calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="dot">.</string>
    <string name="AllClean">AC</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="sign">+/-</string>
    <string name="procent">%</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>
    <string name="pow">^</string>
    <string name="sin">sin</string>
    <string name="asn">asin</string>
    <string name="cos">cos</string>
    <string name="acs">acos</string>
    <string name="ln">ln</string>
    <string name="pi">pi</string>
    <string name="lg">lg</string>
    <string name="e">e</string>
    <string name="tan">tan</string>
    <string name="atn">atan</string>
    <string name="square">&#8730;</string>
    <string name="factorial">!</string>


</resources>