<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numpad_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NumpadFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/firstCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/pow"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnProcent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/procent"
                android:textSize="30dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLeftBracket"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/leftBracket"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRightBracket"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/roundedbutton"
                android:gravity="center"
                android:text="@string/rightBracket"
                android:textSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/seven"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/four"
                android:textSize="30dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/one"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDot"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/roundedbutton"
                android:gravity="center_horizontal|top"
                android:text="@string/dot"
                android:textSize="50dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <!--            <androidx.appcompat.widget.AppCompatButton-->
            <!--                android:id="@+id/btnProcent"-->
            <!--                android:layout_width="75dp"-->
            <!--                android:layout_height="75dp"-->
            <!--                android:layout_marginTop="8dp"-->
            <!--                android:layout_marginBottom="5dp"-->
            <!--                android:background="@drawable/roundedbutton"-->
            <!--                android:text="@string/procent"-->
            <!--                android:textSize="30dp" />-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/eight"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/five"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/two"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnZero"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/zero"
                android:textSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/nine"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/six"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/three"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/equal"

                android:textSize="30dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthCol"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/multiply"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/divide"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/plus"
                android:textSize="30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMinus"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/minus"
                android:textSize="30dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:gravity="center|right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAc"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/AllClean"
            android:textSize="15dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnClear"
            android:layout_width="60dp"
            android:layout_height="39dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/roundedbutton"
            android:src="@android:drawable/ic_input_delete"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>